<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/toolbar"
        layout="@layout/view_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            android:indeterminateTint="@color/global" />

        <TextView
            android:id="@+id/tv_processing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/processing_payment"
            android:textColor="@color/textColor"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_order_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/gray3"
            android:textSize="14sp"
            tools:text="Mã đơn hàng: 123456789" />

        <TextView
            android:id="@+id/tv_please_wait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/please_wait_payment_verification"
            android:textColor="@color/gray3"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/iv_paypal_logo"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/icon_share_paypal"
            android:contentDescription="@string/paypal_logo" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>